--- a/public/index.html
+++ b/public/index.html
@@ -88,6 +88,34 @@
           </div>
         </footer>
       </article>
+      <article class="article">
+        <header>
+          <div class="img">
+            <img src="https://i.imgur.com/3GvwNBf.png">
+            <p>
+              Dianna Lazazzera
+            </p>
+          </div>
+          <div class="address">
+            <address>
+              @deedeeda
+            </address>
+          </div>
+        </header>
+        <div class="text-area">
+          <p>
+            He's making a Twitter thing!
+          </p>
+        </div>
+        <footer>
+          <time>10 days ago</time>
+          <div class="options">
+            <span class="hover"><i class="fa-solid fa-flag"></i></span>
+            <span class="hover"><i class="fa-solid fa-retweet"></i></span>
+            <span class="hover"><i class="fa-solid fa-heart"></i></span>
+          </div>
+        </footer>
+      </article>
     </section>
   </main>
 </body>
