added functions to create and render tweets using supplied objects

--- a/public/index.html
+++ b/public/index.html
@@ -60,35 +60,37 @@
           <output name="counter" class="counter" for="tweet-text">140</output>
         </div>
       </form>
-      <article class="article">
-        <header>
-          <div class="img">
-            <img src="https://i.imgur.com/ilT4JDe.png">
+      <article id="tweets-container">
+<!--         <article id="tweet-article">
+          <header>
+            <div class="img">
+              <img src="https://i.imgur.com/ilT4JDe.png">
+              <p>
+                Dan Lindeblom
+              </p>
+            </div>
+            <div class="address">
+              <address>
+                @dannyboy
+              </address>
+            </div>
+          </header>
+          <div class="text-area">
             <p>
-              Dan Lindeblom
+              I'm making a twitter thing!
             </p>
           </div>
-          <div class="address">
-            <address>
-              @dannyboy
-            </address>
-          </div>
-        </header>
-        <div class="text-area">
-          <p>
-            I'm making a twitter thing!
-          </p>
-        </div>
-        <footer>
-          <time>10 days ago</time>
-          <div class="options">
-            <span class="hover"><i class="fa-solid fa-flag"></i></span>
-            <span class="hover"><i class="fa-solid fa-retweet"></i></span>
-            <span class="hover"><i class="fa-solid fa-heart"></i></span>
-          </div>
-        </footer>
+          <footer>
+            <time>10 days ago</time>
+            <div class="options">
+              <span class="hover"><i class="fa-solid fa-flag"></i></span>
+              <span class="hover"><i class="fa-solid fa-retweet"></i></span>
+              <span class="hover"><i class="fa-solid fa-heart"></i></span>
+            </div>
+          </footer>
+        </article> -->
       </article>
-      <article class="article">
+<!--       <article id="tweet-article">
         <header>
           <div class="img">
             <img src="https://i.imgur.com/3GvwNBf.png">
@@ -115,7 +117,7 @@
             <span class="hover"><i class="fa-solid fa-heart"></i></span>
           </div>
         </footer>
-      </article>
+      </article> -->
     </section>
   </main>
 </body>
