making ajax post requests form submission

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
   <main class="container">
     <section class="new-tweet">
       <h2>Compose Tweet</h2>
-      <form method="POST" action="/tweets">
+      <form method="POST" action="/tweets" id="target">
         <label for="tweet-text">What are you humming about?</label>
         <textarea name="text" id="tweet-text"></textarea>
         <div>
@@ -61,63 +61,8 @@
         </div>
       </form>
       <article id="tweets-container">
-<!--         <article id="tweet-article">
-          <header>
-            <div class="img">
-              <img src="https://i.imgur.com/ilT4JDe.png">
-              <p>
-                Dan Lindeblom
-              </p>
-            </div>
-            <div class="address">
-              <address>
-                @dannyboy
-              </address>
-            </div>
-          </header>
-          <div class="text-area">
-            <p>
-              I'm making a twitter thing!
-            </p>
-          </div>
-          <footer>
-            <time>10 days ago</time>
-            <div class="options">
-              <span class="hover"><i class="fa-solid fa-flag"></i></span>
-              <span class="hover"><i class="fa-solid fa-retweet"></i></span>
-              <span class="hover"><i class="fa-solid fa-heart"></i></span>
-            </div>
-          </footer>
-        </article> -->
+
       </article>
-<!--       <article id="tweet-article">
-        <header>
-          <div class="img">
-            <img src="https://i.imgur.com/3GvwNBf.png">
-            <p>
-              Dianna Lazazzera
-            </p>
-          </div>
-          <div class="address">
-            <address>
-              @deedeeda
-            </address>
-          </div>
-        </header>
-        <div class="text-area">
-          <p>
-            He's making a Twitter thing!
-          </p>
-        </div>
-        <footer>
-          <time>10 days ago</time>
-          <div class="options">
-            <span class="hover"><i class="fa-solid fa-flag"></i></span>
-            <span class="hover"><i class="fa-solid fa-retweet"></i></span>
-            <span class="hover"><i class="fa-solid fa-heart"></i></span>
-          </div>
-        </footer>
-      </article> -->
     </section>
   </main>
 </body>
